forgot & reset password

--- a/App/Views/Auth/login.html
+++ b/App/Views/Auth/login.html
@@ -18,6 +18,6 @@
 
 	<input type="submit" name="submit">
 </form>
-<a href="/auth/users/logOut">out</a>
+<a href="/auth/users/forgot">Forgot password</a>
 
 {% endblock %}
