--- a/App/Views/Lists/lists.html
+++ b/App/Views/Lists/lists.html
@@ -16,7 +16,7 @@
 				<li>image_path: {{ restaurant.image_path }}</li>
 				<li>address: {{ restaurant.address }}</li>
 				<li>cartType: {{ restaurant.cartType }}</li>
-				<a href="/restaurants/{{restaurant.title}}/order">See Menu</a>
+				<a href="/restaurants/{{restaurant.title}}/menus">See Menu</a>
 			{% endfor %}
 		</ul>
 	</div>
