--- a/App/Views/Lists/restaurant.html
+++ b/App/Views/Lists/restaurant.html
@@ -36,13 +36,13 @@
 	{%endfor%}
 
 
-	<div style="float: left; width: 253px; height: 353px; margin: 37px 0px 0px;">
+	<div>
 		<ul>
 			<li><h1>Your Order</h1></li>
 			<li class="food"></li>
 			<li id="total"></li>
 			<span>Including GST</span>
-			<button type="submit" >Place my order > </button>
+			<button type="submit" id="submit">Check Out </button>
 		</ul>
 	</div>
 
