--- a/App/Views/base.html
+++ b/App/Views/base.html
@@ -7,7 +7,7 @@
 	<nav>
 		<a href="/"> Home </a>
 		<a href="/posts"> p </a>
-		<a href="/registration"> registration </a>
+		<a href="/registration?customer"> registration </a>
 		{%if not (auth)%}
 		<a href="/auth/users/login"> login </a>
 		{%else%}
