--- a/App/Views/Auth/login.html
+++ b/App/Views/Auth/login.html
@@ -4,21 +4,54 @@
 
 {{msg}}
 
-<form action="/auth/users/login" method="POST">
-	<label>
-		Email:
-	</label>
-	<input type="text" name="email">
-	<label>
-		Password:
-	</label>
-	<input type="text" name="password">
-	<input type="checkbox" name="remember">
-	<label for="remember">Remember Me</label>
+<div class="container">
+    	<div class="row">
+			<div class="col-md-6 col-md-offset-3">
+				<div class="panel panel-login">
+					<div class="panel-heading">
+						
+						<h3 style="text-align: center;">Login</h3>
+						
+						<hr>
+					</div>
+					<div class="panel-body">
+						<div class="row">
+							<div class="col-lg-12">
+								<form action="/auth/users/login" method="POST" role="form" style="display: block;">
+									<div class="form-group">
+										<input type="text" name="email" tabindex="1" class="form-control" placeholder="Email" value="">
+									</div>
+									<div class="form-group">
+										<input type="password" name="password" tabindex="2" class="form-control" placeholder="Password">
+									</div>
 
-	<input type="submit" name="submit">
-</form>
-<a href="/auth/users/forgot">Forgot password</a>
+									<div class="form-group">
+										<div class="row">
+											<div class="col-sm-6 col-sm-offset-3">
+												<input type="submit" name="signin" tabindex="4" class="form-control btn btn-default" value="Log In">
+											</div>
+										</div>
+									</div>
+									<div class="form-group">
+										<div class="row">
+											<div class="col-sm-6 col-sm-offset-3">
+												<div style="text-align: center;">
+													<input type="checkbox" name="remember">
+													<label for="remember">Remember Me</label><br>
+													<a href="/auth/users/forgot">Forgot password</a><br>
+													<a href="/registration?customer">Or Registration</a>
+												</div>
+											</div>
+										</div>
+									</div>
 
+								</form>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
 
 {% endblock %}
