--- a/App/Views/Partner/addMenu.html
+++ b/App/Views/Partner/addMenu.html
@@ -1,30 +1,58 @@
-{% extends "base.html" %}
+{% extends "panelBase.html" %}
 {% block title %} Add menu {% endblock %}
 
 {% block body %}
-	<h1>Add menu</h1>
+	<div class="container">
 
-	<form action="/edit/{{title}}/addMenus" method="POST">
-		<label>
-			Menu title
-		</label>
-		<input type="text" name="menuTitle" value=""> <br>
+		<div>
+		{% if userRole == 2%}
+			<a class="btn" href="/partner"><strong>Back</strong></a>
+		{% endif %}
+		{% if userRole == 3%}
+			<a class="btn" href="/admin"><strong>Back</strong></a>
+		{% endif %}
+		</div>
 
-		<label>
-			Food title
-		</label>
-		<input type="text" name="foodTitle" value=""> <br>
-		<label>
-			Food price
-		</label>
-		<input type="text" name="price" value=""> <br>
+		<div class="panel panel-default">
+		  <div class="panel-heading">
+		    <h3 class="panel-title">Add new Menu</h3>
+		  </div>
 
-		<label>
-			Food Description
-		</label>
-		<input type="text" name="description" value=""> <br>
-		<input type="hidden" name="title" value="{{title}}">
-		<input type="submit" name="submit" value="add">
-	</form>
+		  <div class="panel-body">
+		  	<form action="/edit/{{title}}/addMenus" method="POST">
+		  		<div class="form-group">
+			  		<label>
+						Menu title
+					</label>
+					<input class="form-control" type="text" name="menuTitle" value="">
+		  		</div>
 
+		  		<div class="form-group">
+				  	<label>
+							Food title
+					</label>
+					<input class="form-control" type="text" name="foodTitle" value="">
+		  		</div>
+
+		  		<div class="form-group">
+		  			<label>
+					Food price
+					</label>
+					<input class="form-control" type="text" name="price" value="">
+		  		</div>
+
+				<div class="form-group">
+					<label>
+						Food Description
+					</label>
+					<input class="form-control" type="text" name="description" value="">					
+				</div>
+				<div class="form-group">
+					<input type="hidden" name="title" value="{{title}}">
+					<input class="btn pull-right" type="submit" name="submit" value="add">
+				</div>
+			</form>
+		  </div>
+		</div>
+	</div>
 {% endblock %}
