--- a/App/Views/base.html
+++ b/App/Views/base.html
@@ -4,15 +4,31 @@
 	<title>{% block title %}{% endblock %}</title>
 </head>
 <body>
-	<nav>
-		<a href="/"> Home </a>
-		<a href="/posts"> p </a>
-		<a href="/registration?customer"> registration </a>
-		{%if not (auth)%}
-		<a href="/auth/users/login"> login </a>
-		{%else%}
-		<a href="/auth/users/logOut"> logout </a>
-		{%endif%}
+	<nav class="navbar navbar-default ">
+	  <div class="container-fluid">
+	    <div class="navbar-header">
+	      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+	        <span class="sr-only">Toggle navigation</span>
+	        <span class="icon-bar"></span>
+	        <span class="icon-bar"></span>
+	        <span class="icon-bar"></span>
+	      </button>
+	      <a class="navbar-brand" href="#">Brand</a>
+	    </div>
+	    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+	      <ul class="nav navbar-nav">
+	        <li><a href="/">Home</a></li>
+	      </ul>
+ 	      <ul class="nav navbar-nav navbar-right">
+ 	      	
+	        {%if not (auth)%}
+	        <li><a href="/auth/users/login"> Login </a></li>
+	    	{%else%}
+	        <li><a href="/auth/users/logOut"> Logout </a> </li>
+	        {%endif%}
+	      </ul>
+	    </div>
+	  </div>
 	</nav>
 
 	{% block body %}
@@ -20,5 +36,9 @@
 
 </body>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+
 <script type="text/javascript" src="http://localhost:8888/js/js.js"></script>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+<link rel="stylesheet" type="text/css" href="http://localhost:8888/css/style2.css">
 </html>
