fix payment flow

--- a/App/Views/Lists/lists.html
+++ b/App/Views/Lists/lists.html
@@ -15,13 +15,13 @@
 								<li>
 								<div class="tag">
 									<label>Delivery</label>
-									<input type="radio" name="cartType" value="delivery" id="delivery" checked="checked">
+									<input class="listType" type="radio" name="cartType" value="delivery" id="delivery" checked="checked">
 								</div>
 								</li>
 								<li>
 								<div class="tag">
 									<label>Pick-up</label>
-									<input type="radio" name="cartType" value="pickUp" id="pickUp">
+									<input class="listType" type="radio" name="cartType" value="pickUp" id="pickUp">
 								</div>
 								</li>
 							</ul>
