--- a/App/Views/Auth/registPartner.html
+++ b/App/Views/Auth/registPartner.html
@@ -53,7 +53,7 @@
 											<div class="col-sm-6 col-sm-offset-3">
 												<div style="text-align: center;">
 													<input class="btn btn-default" type="submit"> <br>
-													<a href="/registration?partner">Partner registration</a>
+													<a href="/registration?customer">Customer registration</a>
 												</div>
 											</div>
 										</div>
